ui bug resolved

--- a/reference/error-handling.mdx
+++ b/reference/error-handling.mdx
@@ -12,13 +12,23 @@ We use the HTTP status code, where status codes in the range `2xx` indicate succ
 
 See the table below for further information:
 
-| Status Code                   | Description                                       |
-| ----------------------------- | ------------------------------------------------- |
+| Status Code                          | Description                                       |
+| :------------------------------------- | :------------------------------------------------- |
+| 200 - ✅ Success                      | Request successfully processed/created.           |
+| 400 - ❌ Bad Request                  | The request was unacceptable.                     |
+| 403 - ❌ Forbidden                    | You don't have permission to perform the request. |
+| 404 - ❌ Not Found                    | The requested resource doesn't exist.             |
+| 500 - ❌ Internal Server Error        | Something went wrong on our side.                 |
+
+
+
+{/* | Status Code                   | Description                                       |
+| ----------------------------- | :------------------------------------------------- |
 | 200 - <Icon icon="square-check" /> Success               | Request successfully processed/created.           |
 | 400 - <Icon icon="xmark" /> Bad Request           | The request was unacceptable.                     |
 | 403 - <Icon icon="xmark" /> Forbidden             | You don't have permission to perform the request. |
 | 404 - <Icon icon="xmark" /> Not Found             | The requested resource doesn't exist.             |
-| 500 - <Icon icon="xmark" /> Internal Server Error | Something went wrong on our side.                 |
+| 500 - <Icon icon="xmark" /> Internal Server Error | Something went wrong on our side.                 | */}
 
 ## Error Troubleshoots
 
