--- a/reference/quickstart.mdx
+++ b/reference/quickstart.mdx
@@ -3,6 +3,8 @@ title: "Quickstart Guide"
 icon: plane-departure
 description: "A quick guide on how to get started with Buildify."
 ---
+
+
 This quick start guide will assist you in getting started with Buildify, obtaining your Buildify API key and product ID, and making it easy for you to use our API. A quick guide on how to get started with Buildify.
 
 
@@ -41,11 +43,9 @@ We will walk you through our API demo, where you can find a solution and real-li
 
 We will provide you with your Buildify API Key, after you subscribe to one of the available Buildify product packages.
 
-> ## <Icon icon="book" />
->
-> Info:
->
-> Open the **[Authentication](/reference/authentication-1)** page for more details.
+<Card title="Info:" icon="book" href="#">
+  Open the **[Authentication](/reference/authentication-1)** page for more details.
+</Card>
 
 #### Step 5: Test API on Readme
 
@@ -53,13 +53,13 @@ Now you have acquired your API Key. You may begin to play around with our API en
 
 1. Click the **[Search Listings](/reference/search-listings)** endpoint under the **Listings**.
 2. Copy your **API Key**, and paste it in the **Authentication Header** on the right side.
+<Card title="Info:" icon="book" href="#">
+ To obtain a result based on specific criteria (Such as radius, coordinates, attributes), you can fill in the available **Query Params**.
+</Card>
 
-> ## <Icon icon="book" />
->
-> Info:
->
-> To obtain a result based on specific criteria (Such as radius, coordinates, attributes), you can fill in the available **Query Params**.
 
 4. Click the "**Try It!**" button on the request sample section, which will generate either a successful or error response in the response section.
 
-![Alt text](https://drive.google.com/uc?export=view&id=1zfLYWWvUb4dclkCzYFddY4zGkDNego-W)
+ {/* ![Alt text](https://drive.google.com/uc?export=view&id=1zfLYWWvUb4dclkCzYFddY4zGkDNego-W)  */}
+ 
+
